# postgres

.devcontainer/: devcontainer.json
src/backend/access/transam/: xlogrecovery.c
src/backend/catalog/: Makefile
src/backend/replication/: repl_gram.y  repl_scanner.l  walsender.c
src/backend/replication/libpqwalreceiver/: libpqwalreceiver.c
src/backend/storage/smgr/: md.c  meson.build  smgr.c
src/backend/storage/sync/: sync.c
src/backend/tcop/: postgres.c
src/backend/utils/: errcodes.txt
src/backend/utils/error/: assert.c
src/backend/utils/misc/: guc_tables.c
src/include/bootstrap/: bootstrap.h
src/include/nodes/: replnodes.h
src/include/replication/: walreceiver.h
src/include/storage/: smgr.h
src/include/utils/: guc_tables.h
src/test/perl/PostgreSQL/Test/: Cluster.pm
src/tools/msvc/: Solution.pm
